[package]
name = "activate_windows"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0"
font-kit = "0"

[target."cfg(target_os = \"macos\")".dependencies.core-graphics]
version = "0.22"

[dependencies.iced]
version = "0"
features = ["wgpu", "glow"]

[profile.release]
lto = "thin"
opt-level = 3
incremental = false
strip = true
codegen-units = 1